--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11,6 +11,11 @@
     background-image: linear-gradient(to left, #fff 0%, #fff 51%, #fff 100%);
 }
 
+.main-menu-item .container .language {
+    padding: 5px 20px;
+    margin-right: 50px;
+    font-size: 14px;
+}
 /**************** extend css start ****************/
 /**************** common css start ****************/
 /* line 4, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_common.scss */
