--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11,6 +11,32 @@
     background-image: linear-gradient(to left, #fff 0%, #fff 51%, #fff 100%);
 }
 
+.user-dropdown {
+    position: relative;
+    display: inline-block;
+}
+.user-dropdown .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 4px;
+}
+.user-dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
 .main-menu-item .container .language {
     padding: 5px 20px;
     margin-right: 50px;
