Chuc nang gio hang

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7550,6 +7550,7 @@ h6 {
 /* line 2, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_footer.scss */
 .footer_part {
     padding: 130px 0px 25px;
+    background: #f9f9ff;
 }
 
 @media (max-width: 576px) {
