--- a/src/assets/css/product-info.css
+++ b/src/assets/css/product-info.css
@@ -127,7 +127,7 @@
 .quantity-cart {
     display: flex;
     gap: 1rem;
-    margin-bottom: 1.5rem;
+    /*margin-bottom: 1.5rem;*/
 }
 
 .quantity-selector {
