--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5677,7 +5677,7 @@ ul {
 
 /* line 11, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_confirmation_part.scss */
 .confirmation_part .single_confirmation_details {
-    background-color: #ecfdff;
+    background-color: #fafafa;
     padding: 35px 40px;
 }
 
@@ -5729,7 +5729,7 @@ ul {
 /* line 47, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_confirmation_part.scss */
 .confirmation_part .order_details_iner {
     margin-top: 50px;
-    background-color: #ecfdff;
+    background-color: rgb(248 254 255);
     padding: 30px 30px 15px;
     text-transform: capitalize;
 }
