--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5171,7 +5171,7 @@ ul {
 
 /* line 1647, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_product.scss */
 .order_box .list_2 li a {
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     color: #2a2a2a;
     font-weight: 500;
 }
