Tim kiem san pham

--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 140px;
+    /*padding-bottom: 140px;*/
     z-index: 1000;
 }
 
