--- a/src/assets/css/orderhistory.css
+++ b/src/assets/css/orderhistory.css
@@ -62,7 +62,10 @@
 }
 
 .order_details_iner {
-    margin-top: 20px;
+    margin-top: 50px;
+    background-color: rgb(248 254 255);
+    padding: 30px 30px 15px;
+    text-transform: capitalize;
 }
 
 .order_details_iner table {
@@ -73,4 +76,9 @@
 .order_details_iner table td {
     padding: 10px;
     vertical-align: middle;
+}
+
+/* Đường kẻ ngang dưới mỗi sản phẩm (không áp dụng cho dòng tổng, giảm giá, phí vận chuyển, tổng tiền) */
+.order_details_iner table tbody tr.product-row:not(:last-child) {
+    border-bottom: 1px solid #e2e2e2;
 }
