--- a/src/assets/css/orderhistory.css
+++ b/src/assets/css/orderhistory.css
@@ -33,7 +33,7 @@
 }
 
 .single_confirmation_details {
-    background: #f9f9f9;
+    background: #fcfdfd;
     padding: 20px;
     border-radius: 8px;
     margin-bottom: 20px;
